cmake_minimum_required(VERSION 3.10)
project(ModernCpp)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add executables for each example
add_executable(auto_example std11/auto/auto_example.cpp)
add_executable(lambda_example std11/lambda/lambda_example.cpp)
add_executable(smart_pointers_example std11/smart_pointers/smart_pointers_example.cpp)
add_executable(move_semantics_example std11/move_semantics/move_semantics_example.cpp)
add_executable(constexpr_example std11/constexpr/constexpr_example.cpp)
add_executable(variadic_templates_example std11/variadic_templates/variadic_templates_example.cpp)
add_executable(range_based_for_example std11/range_based_for/range_based_for_example.cpp)
add_executable(initializer_lists_example std11/initializer_lists/initializer_lists_example.cpp)
add_executable(nullptr_example std11/nullptr/nullptr_example.cpp)
add_executable(enum_class_example std11/enum_class/enum_class_example.cpp)
add_executable(override_final_example std11/override_final/override_final_example.cpp)
add_executable(threads_future_example std11/threads_future/threads_future_example.cpp)
add_executable(stl_containers_example std11/stl_containers/stl_containers_example.cpp)
add_executable(stl_algorithms_example std11/stl_algorithms/stl_algorithms_example.cpp)
add_executable(regex_example std11/regex/regex_example.cpp)
add_executable(random_example std11/random/random_example.cpp)
add_executable(mutex_example std11/mutex/mutex_example.cpp)
add_executable(any_example std17/any/any_example.cpp)
add_executable(string_view_example std17/string_view/string_view_example.cpp)
add_executable(atomic_example std11/atomic/atomic_example.cpp)
add_executable(condition_variable_example std11/condition_variable/condition_variable_example.cpp)
add_executable(span_example std20/span/span_example.cpp)
add_executable(jthread_example std20/jthread/jthread_example.cpp)
add_executable(generic_lambdas_example std14/generic_lambdas/generic_lambdas_example.cpp)
add_executable(variant_example std17/variant/variant_example.cpp)
add_executable(RAII_example BestPractices/RAII/RAII_example.cpp)
add_executable(exception_safety_example BestPractices/exception_safety/exception_safety_example.cpp)
add_executable(const_correctness_example BestPractices/const_correctness/const_correctness_example.cpp)